Add endpoints PUT/users DELETE/users PUT/avatars
